Improve list of rates UI

--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -10,9 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+        android:drawablePadding="8dp"
+        android:textColor="@color/blackenedGrey"
+        android:textSize="22sp"
         android:textStyle="bold"
+        app:drawableStartCompat="@drawable/ic_star"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
