--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,8 @@
                 android:id="@+id/currencyRates"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingTop="16dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             <include
